완료 상태 표시 / 삭제 / 추가 페이지 연결 코드 추가

--- a/templates/index.html
+++ b/templates/index.html
@@ -12,6 +12,7 @@
         <input type="text" id="title" placeholder="Title" required>
         <input type="text" id="description" placeholder="Description" required>
         <button type="submit">Add To-Do</button>
+        <button onclick="location.href='/static/todo_app_frontend.html'">Go to To-Do List</button>
     </form>
     <script>
         async function fetchTodos() {
